Switched to F1 metric

--- a/Medium/pipeline_test.ipynb
+++ b/Medium/pipeline_test.ipynb
@@ -11,7 +11,8 @@
     "import os\n",
     "import tensorflow as tf\n",
     "import time\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import tensorflow_addons as tfa"
    ]
   },
   {
@@ -179,8 +180,8 @@
     "\n",
     "    status[:] = np.where(status==\"up\", 1,0)\n",
     "    status=status.map(lambda x: float(x))\n",
-    "    #status=status.rolling(20).mean()\n",
-    "    #status=status.map(np.floor)\n",
+    "    status=status.rolling(20).mean()\n",
+    "    status=status.map(np.floor)\n",
     "\n",
     "    train_init=pd.concat([itime, minute, hour, day, month, interface, dev_id, inband, outband, latency, packet, jitter, status], axis=1)\n",
     "    train_init.columns=['Time','Minute', 'Hour','Day','Month', 'Interface', 'Dev_id', 'Inband', 'Outband', 'Latency', 'Packet', 'Jitter', 'Status']\n",
@@ -234,6 +235,52 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Status\n",
+       "1.0       87924\n",
+       "0.0        5184\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Status\n",
+       "1.0       87924\n",
+       "0.0        5184\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#train, train_label = preproccess(data)\n",
@@ -256,16 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-07 10:30:13.848975: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
-      "2022-03-07 10:30:13.849011: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n",
-      "2022-03-07 10:30:13.914539: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n"
+      "2022-03-09 10:17:36.539923: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
+      "2022-03-09 10:17:36.539956: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n",
+      "2022-03-09 10:17:36.613877: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1630] Profiler found 1 GPUs\n",
+      "2022-03-09 10:17:36.614738: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcupti.so.11.2'; dlerror: libcupti.so.11.2: cannot open shared object file: No such file or directory\n",
+      "2022-03-09 10:17:36.643936: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n",
+      "2022-03-09 10:17:36.644109: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1764] CUPTI activity buffer flushed\n"
      ]
     }
    ],
@@ -285,14 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_model():\n",
     "    model = tf.keras.Sequential([\n",
     "            tf.keras.layers.Dense(128, activation='relu',kernel_regularizer='l1_l2'),\n",
-    "            #tf.keras.layers.Dropout(0.4),\n",
+    "            tf.keras.layers.Dropout(0.2),\n",
     "            tf.keras.layers.Dense(128, activation='relu',kernel_regularizer='l1_l2'),\n",
     "            #tf.keras.layers.Dropout(0.4),\n",
     "            #tf.keras.layers.Dense(16, activation='relu', kernel_regularizer='l1_l2'),\n",
@@ -304,57 +354,50 @@
     "            tf.keras.layers.Dense(1, activation='sigmoid')])\n",
     "    model.compile(optimizer='adam',\n",
     "            loss='BinaryCrossentropy',\n",
-    "            metrics=['accuracy'])    \n",
+    "            metrics=tfa.metrics.F1Score(num_classes=1, average='micro'))\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      " 500/5394 [=>............................] - ETA: 13s - loss: 2.3027 - f1_score: 0.7750"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-07 10:30:14.044174: E tensorflow/stream_executor/cuda/cuda_driver.cc:271] failed call to cuInit: CUDA_ERROR_UNKNOWN: unknown error\n",
-      "2022-03-07 10:30:14.044202: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:169] retrieving CUDA diagnostic information for host: jordan-desktop\n",
-      "2022-03-07 10:30:14.044208: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:176] hostname: jordan-desktop\n",
-      "2022-03-07 10:30:14.044268: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:200] libcuda reported version is: 510.54.0\n",
-      "2022-03-07 10:30:14.044286: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:204] kernel reported version is: 510.54.0\n",
-      "2022-03-07 10:30:14.044291: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:310] kernel version seems to match DSO: 510.54.0\n",
-      "2022-03-07 10:30:14.044473: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2022-03-09 10:19:59.543505: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
+      "2022-03-09 10:19:59.543532: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/6\n",
-      " 626/5394 [==>...........................] - ETA: 13s - loss: 1.8339 - accuracy: 0.7978"
+      " 513/5394 [=>............................] - ETA: 17s - loss: 2.2612 - f1_score: 0.7754"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-07 10:30:16.247188: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
-      "2022-03-07 10:30:16.247217: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n",
-      "2022-03-07 10:30:16.274364: I tensorflow/core/profiler/lib/profiler_session.cc:67] Profiler session collecting data.\n",
-      "2022-03-07 10:30:16.277145: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n",
-      "2022-03-07 10:30:16.283760: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/20220307-103013/plugins/profile/2022_03_07_10_30_16\n",
+      "2022-03-09 10:20:00.194300: I tensorflow/core/profiler/lib/profiler_session.cc:67] Profiler session collecting data.\n",
+      "2022-03-09 10:20:00.194774: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1764] CUPTI activity buffer flushed\n",
+      "2022-03-09 10:20:00.231737: I tensorflow/core/profiler/internal/gpu/cupti_collector.cc:521]  GpuTracer has collected 2937 callback api events and 2890 activity events. \n",
+      "2022-03-09 10:20:00.261586: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n",
+      "2022-03-09 10:20:00.309200: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/20220309-101736/plugins/profile/2022_03_09_10_20_00\n",
       "\n",
-      "2022-03-07 10:30:16.288912: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for trace.json.gz to logs/20220307-103013/plugins/profile/2022_03_07_10_30_16/jordan-desktop.trace.json.gz\n",
-      "2022-03-07 10:30:16.292912: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/20220307-103013/plugins/profile/2022_03_07_10_30_16\n",
-      "\n",
-      "2022-03-07 10:30:16.293005: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for memory_profile.json.gz to logs/20220307-103013/plugins/profile/2022_03_07_10_30_16/jordan-desktop.memory_profile.json.gz\n",
-      "2022-03-07 10:30:16.293188: I tensorflow/core/profiler/rpc/client/capture_profile.cc:251] Creating directory: logs/20220307-103013/plugins/profile/2022_03_07_10_30_16\n",
-      "Dumped tool data for xplane.pb to logs/20220307-103013/plugins/profile/2022_03_07_10_30_16/jordan-desktop.xplane.pb\n",
-      "Dumped tool data for overview_page.pb to logs/20220307-103013/plugins/profile/2022_03_07_10_30_16/jordan-desktop.overview_page.pb\n",
-      "Dumped tool data for input_pipeline.pb to logs/20220307-103013/plugins/profile/2022_03_07_10_30_16/jordan-desktop.input_pipeline.pb\n",
-      "Dumped tool data for tensorflow_stats.pb to logs/20220307-103013/plugins/profile/2022_03_07_10_30_16/jordan-desktop.tensorflow_stats.pb\n",
-      "Dumped tool data for kernel_stats.pb to logs/20220307-103013/plugins/profile/2022_03_07_10_30_16/jordan-desktop.kernel_stats.pb\n",
+      "2022-03-09 10:20:00.342110: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for trace.json.gz to logs/20220309-101736/plugins/profile/2022_03_09_10_20_00/jordan-desktop.trace.json.gz\n",
+      "2022-03-09 10:20:00.389302: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/20220309-101736/plugins/profile/2022_03_09_10_20_00\n",
       "\n"
      ]
     },
@@ -362,28 +405,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5394/5394 [==============================] - 10s 2ms/step - loss: 0.6710 - accuracy: 0.8018\n",
-      "Epoch 2/6\n",
-      "5394/5394 [==============================] - 7s 1ms/step - loss: 0.5189 - accuracy: 0.8021\n",
-      "Epoch 3/6\n",
-      "5394/5394 [==============================] - 7s 1ms/step - loss: 0.5191 - accuracy: 0.8021\n",
-      "Epoch 4/6\n",
-      "5394/5394 [==============================] - 7s 1ms/step - loss: 0.5191 - accuracy: 0.8021\n",
-      "Epoch 5/6\n",
-      "5394/5394 [==============================] - 7s 1ms/step - loss: 0.5190 - accuracy: 0.8021\n",
-      "Epoch 6/6\n",
-      "5394/5394 [==============================] - 7s 1ms/step - loss: 0.5190 - accuracy: 0.8021\n"
+      " 566/5394 [==>...........................] - ETA: 19s - loss: 2.1127 - f1_score: 0.7758"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-09 10:20:00.395710: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for memory_profile.json.gz to logs/20220309-101736/plugins/profile/2022_03_09_10_20_00/jordan-desktop.memory_profile.json.gz\n",
+      "2022-03-09 10:20:00.396684: I tensorflow/core/profiler/rpc/client/capture_profile.cc:251] Creating directory: logs/20220309-101736/plugins/profile/2022_03_09_10_20_00\n",
+      "Dumped tool data for xplane.pb to logs/20220309-101736/plugins/profile/2022_03_09_10_20_00/jordan-desktop.xplane.pb\n",
+      "Dumped tool data for overview_page.pb to logs/20220309-101736/plugins/profile/2022_03_09_10_20_00/jordan-desktop.overview_page.pb\n",
+      "Dumped tool data for input_pipeline.pb to logs/20220309-101736/plugins/profile/2022_03_09_10_20_00/jordan-desktop.input_pipeline.pb\n",
+      "Dumped tool data for tensorflow_stats.pb to logs/20220309-101736/plugins/profile/2022_03_09_10_20_00/jordan-desktop.tensorflow_stats.pb\n",
+      "Dumped tool data for kernel_stats.pb to logs/20220309-101736/plugins/profile/2022_03_09_10_20_00/jordan-desktop.kernel_stats.pb\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5394/5394 [==============================] - 19s 3ms/step - loss: 0.8287 - f1_score: 0.7753\n",
+      "Epoch 2/20\n",
+      "5394/5394 [==============================] - 31s 6ms/step - loss: 0.6783 - f1_score: 0.7753\n",
+      "Epoch 3/20\n",
+      "5394/5394 [==============================] - 35s 6ms/step - loss: 0.6783 - f1_score: 0.7753\n",
+      "Epoch 4/20\n",
+      "5394/5394 [==============================] - 14s 3ms/step - loss: 0.6783 - f1_score: 0.7753\n",
+      "Epoch 5/20\n",
+      "5394/5394 [==============================] - 12s 2ms/step - loss: 0.6783 - f1_score: 0.7753\n",
+      "Epoch 6/20\n",
+      "5394/5394 [==============================] - 34s 6ms/step - loss: 0.6783 - f1_score: 0.7753\n",
+      "Epoch 7/20\n",
+      "5394/5394 [==============================] - 16s 3ms/step - loss: 0.6783 - f1_score: 0.7753\n",
+      "Epoch 8/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 9/20\n",
+      "5394/5394 [==============================] - 12s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 10/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 11/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 12/20\n",
+      "5394/5394 [==============================] - 12s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 13/20\n",
+      "5394/5394 [==============================] - 13s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 14/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 15/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 16/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 17/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6782 - f1_score: 0.7753\n",
+      "Epoch 18/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6781 - f1_score: 0.7753\n",
+      "Epoch 19/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6781 - f1_score: 0.7753\n",
+      "Epoch 20/20\n",
+      "5394/5394 [==============================] - 11s 2ms/step - loss: 0.6781 - f1_score: 0.7753\n"
      ]
     }
    ],
    "source": [
     "model = get_model()       \n",
-    "history = model.fit(train, train_label, epochs=6, batch_size=128,  callbacks = [tboard_callback])"
+    "history = model.fit(train, train_label, epochs=5, batch_size=128,  callbacks = [tboard_callback])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,28 +484,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 75004), started 1 day, 16:35:34 ago. (Use '!kill 75004' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-220e03e53fd5bd2c\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-981938e00129d6fe\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-220e03e53fd5bd2c\");\n",
-       "          const url = new URL(\"http://localhost\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-981938e00129d6fe\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
@@ -437,16 +520,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2910/2910 - 2s - loss: 0.2929 - accuracy: 0.9604 - 2s/epoch - 639us/step\n",
+      "2910/2910 - 3s - loss: 0.5045 - f1_score: 0.9714 - 3s/epoch - 1ms/step\n",
       "\n",
-      "Test Accuracy: 0.9603900909423828\n"
+      "Test Accuracy: 0.9713641405105591\n"
      ]
     }
    ],
@@ -461,6 +544,18 @@
    "source": [
     "model.save('model.h5')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1:31 after loading datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
