--- a/Medium/Working model.ipynb
+++ b/Medium/Working model.ipynb
@@ -12,7 +12,8 @@
     "import tensorflow as tf\n",
     "import time\n",
     "from datetime import datetime\n",
-    "import tensorflow_addons as tfa"
+    "import tensorflow_addons as tfa\n",
+    "import keras_tuner as kt"
    ]
   },
   {
@@ -235,52 +236,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Status\n",
-       "1.0       87924\n",
-       "0.0        5184\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_label.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Status\n",
-       "1.0       87924\n",
-       "0.0        5184\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_label.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#train, train_label = preproccess(data)\n",
@@ -303,19 +258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-09 10:17:36.539923: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
-      "2022-03-09 10:17:36.539956: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n",
-      "2022-03-09 10:17:36.613877: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1630] Profiler found 1 GPUs\n",
-      "2022-03-09 10:17:36.614738: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcupti.so.11.2'; dlerror: libcupti.so.11.2: cannot open shared object file: No such file or directory\n",
-      "2022-03-09 10:17:36.643936: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n",
-      "2022-03-09 10:17:36.644109: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1764] CUPTI activity buffer flushed\n"
+      "2022-03-09 15:31:54.880659: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
+      "2022-03-09 15:31:54.880684: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n",
+      "2022-03-09 15:31:54.901321: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1630] Profiler found 1 GPUs\n",
+      "2022-03-09 15:31:54.901848: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcupti.so.11.2'; dlerror: libcupti.so.11.2: cannot open shared object file: No such file or directory\n",
+      "2022-03-09 15:31:54.904855: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n",
+      "2022-03-09 15:31:54.904979: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1764] CUPTI activity buffer flushed\n"
      ]
     }
    ],
@@ -335,22 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_model():\n",
     "    model = tf.keras.Sequential([\n",
     "            tf.keras.layers.Dense(128, activation='relu',kernel_regularizer='l1_l2'),\n",
+    "            tf.keras.layers.BatchNormalization(),\n",
     "            tf.keras.layers.Dropout(0.2),\n",
     "            tf.keras.layers.Dense(128, activation='relu',kernel_regularizer='l1_l2'),\n",
-    "            #tf.keras.layers.Dropout(0.4),\n",
-    "            #tf.keras.layers.Dense(16, activation='relu', kernel_regularizer='l1_l2'),\n",
-    "            #tf.keras.layers.Dropout(0.3),\n",
-    "            #tf.keras.layers.Dense(10, activation='relu', kernel_regularizer='l1_l2'),\n",
-    "            #tf.keras.layers.Dropout(0.3),\n",
-    "            #tf.keras.layers.Dense(10, activation='relu', kernel_regularizer='l1_l2'),\n",
-    "            #tf.keras.layers.Dropout(0.3),\n",
+    "            tf.keras.layers.BatchNormalization(),\n",
     "            tf.keras.layers.Dense(1, activation='sigmoid')])\n",
     "    model.compile(optimizer='adam',\n",
     "            loss='BinaryCrossentropy',\n",
@@ -360,9 +310,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-09 15:31:54.973085: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-09 15:31:54.978377: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-03-09 15:31:54.978702: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-03-09 15:31:54.979198: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-03-09 15:31:54.979458: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-03-09 15:31:54.979799: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-03-09 15:31:54.980070: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-03-09 15:31:55.332223: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-03-09 15:31:55.332544: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-03-09 15:31:55.332824: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:936] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-03-09 15:31:55.333085: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 6699 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1070, pci bus id: 0000:01:00.0, compute capability: 6.1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 484/5394 [=>............................] - ETA: 14s - loss: 2.6647 - f1_score: 0.7745"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-09 15:31:58.262431: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
+      "2022-03-09 15:31:58.262459: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 511/5394 [=>............................] - ETA: 16s - loss: 2.5476 - f1_score: 0.7746"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-09 15:31:58.566804: I tensorflow/core/profiler/lib/profiler_session.cc:67] Profiler session collecting data.\n",
+      "2022-03-09 15:31:58.567115: I tensorflow/core/profiler/internal/gpu/cupti_tracer.cc:1764] CUPTI activity buffer flushed\n",
+      "2022-03-09 15:31:58.613641: I tensorflow/core/profiler/internal/gpu/cupti_collector.cc:521]  GpuTracer has collected 4827 callback api events and 4791 activity events. \n",
+      "2022-03-09 15:31:58.685335: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 520/5394 [=>............................] - ETA: 20s - loss: 2.5111 - f1_score: 0.7745"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-09 15:31:58.776752: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/20220309-153154/plugins/profile/2022_03_09_15_31_58\n",
+      "\n",
+      "2022-03-09 15:31:58.840573: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for trace.json.gz to logs/20220309-153154/plugins/profile/2022_03_09_15_31_58/jordan-desktop.trace.json.gz\n",
+      "2022-03-09 15:31:58.918436: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/20220309-153154/plugins/profile/2022_03_09_15_31_58\n",
+      "\n",
+      "2022-03-09 15:31:58.923891: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for memory_profile.json.gz to logs/20220309-153154/plugins/profile/2022_03_09_15_31_58/jordan-desktop.memory_profile.json.gz\n",
+      "2022-03-09 15:31:58.925362: I tensorflow/core/profiler/rpc/client/capture_profile.cc:251] Creating directory: logs/20220309-153154/plugins/profile/2022_03_09_15_31_58\n",
+      "Dumped tool data for xplane.pb to logs/20220309-153154/plugins/profile/2022_03_09_15_31_58/jordan-desktop.xplane.pb\n",
+      "Dumped tool data for overview_page.pb to logs/20220309-153154/plugins/profile/2022_03_09_15_31_58/jordan-desktop.overview_page.pb\n",
+      "Dumped tool data for input_pipeline.pb to logs/20220309-153154/plugins/profile/2022_03_09_15_31_58/jordan-desktop.input_pipeline.pb\n",
+      "Dumped tool data for tensorflow_stats.pb to logs/20220309-153154/plugins/profile/2022_03_09_15_31_58/jordan-desktop.tensorflow_stats.pb\n",
+      "Dumped tool data for kernel_stats.pb to logs/20220309-153154/plugins/profile/2022_03_09_15_31_58/jordan-desktop.kernel_stats.pb\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5394/5394 [==============================] - 17s 3ms/step - loss: 0.5757 - f1_score: 0.7753\n",
+      "Epoch 2/5\n",
+      "5394/5394 [==============================] - 15s 3ms/step - loss: 0.3462 - f1_score: 0.7753\n",
+      "Epoch 3/5\n",
+      "5394/5394 [==============================] - 14s 3ms/step - loss: 0.3408 - f1_score: 0.7753\n",
+      "Epoch 4/5\n",
+      "5394/5394 [==============================] - 14s 3ms/step - loss: 0.3408 - f1_score: 0.7753\n",
+      "Epoch 5/5\n",
+      "5394/5394 [==============================] - 14s 3ms/step - loss: 0.3428 - f1_score: 0.7753\n"
+     ]
+    }
+   ],
    "source": [
     "model = get_model()       \n",
     "history = model.fit(train, train_label, epochs=5, batch_size=128,  callbacks = [tboard_callback])"
@@ -370,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,20 +434,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6007 (pid 7541), started 0:32:20 ago. (Use '!kill 7541' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-981938e00129d6fe\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-1d98fcd64a81cebe\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-981938e00129d6fe\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-1d98fcd64a81cebe\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
+       "          const port = 6007;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
        "          }\n",
@@ -415,14 +479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2910/2910 - 3s - loss: 0.5045 - f1_score: 0.9714 - 3s/epoch - 1ms/step\n",
+      "2910/2910 - 4s - loss: 0.2594 - f1_score: 0.9714 - 4s/epoch - 1ms/step\n",
       "\n",
       "Test Accuracy: 0.9713641405105591\n"
      ]
@@ -446,11 +510,6 @@
    "source": [
     "1:31 after loading datasets"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
