Nearly implemented hyperparameter search

--- a/Medium/Tuning test.ipynb
+++ b/Medium/Tuning test.ipynb
@@ -270,26 +270,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_model():\n",
-    "    model = tf.keras.Sequential([\n",
-    "            tf.keras.layers.Dense(128, activation='relu',kernel_regularizer='l1_l2'),\n",
-    "            tf.keras.layers.BatchNormalization(),\n",
-    "            tf.keras.layers.Dropout(0.2),\n",
-    "            tf.keras.layers.Dense(128, activation='relu',kernel_regularizer='l1_l2'),\n",
-    "            tf.keras.layers.BatchNormalization(),\n",
-    "            tf.keras.layers.Dense(1, activation='sigmoid')])\n",
-    "    model.compile(optimizer='adam',\n",
-    "            loss='BinaryCrossentropy',\n",
-    "            metrics=tfa.metrics.F1Score(num_classes=1, average='micro'))\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_model(hp):\n",
     "    model=tf.keras.Sequential()\n",
     "    hp_units= hp.Int('units', min_value=32, max_value=512, step=8)\n",
@@ -314,7 +294,7 @@
    "outputs": [],
    "source": [
     "tuner = kt.Hyperband(get_model,\n",
-    "                     objective='val_accuracy',\n",
+    "                     objective=tfa.metrics.F1Score(num_classes=1, average='micro'),\n",
     "                     max_epochs=5,\n",
     "                     factor=3,\n",
     "                     directory='/home/jordan/Documents/DataSets/DimensionData/',\n",
@@ -327,8 +307,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = get_model()       \n",
-    "history = model.fit(train, train_label, epochs=5, batch_size=128,  callbacks = [tboard_callback])"
+    "tuner.search(train, train_label, epochs=50, validation_split=0.2)\n",
+    "best_hps=tuner.get_best_hyperparameters(num_trials=1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"\"\"\n",
+    "The hyperparameter search is complete. The optimal number of units in the first densely-connected\n",
+    "layer is {best_hps.get('units')} and the optimal learning rate for the optimizer\n",
+    "is {best_hps.get('learning_rate')}.\n",
+    "\"\"\")"
    ]
   },
   {
