Working hyper tuner

--- a/Medium/Tuning test.ipynb
+++ b/Medium/Tuning test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import os\n",
     "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
     "import time\n",
     "from datetime import datetime\n",
     "import tensorflow_addons as tfa\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.exports()>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "exports"
    ]
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,9 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-10 12:34:45.326161: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
+      "2022-03-10 12:34:45.326248: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n",
+      "2022-03-10 12:34:45.335901: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-03-10 12:34:45.336419: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n"
+     ]
+    }
+   ],
    "source": [
     "logs = \"logs/\" + datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "tboard_callback = tf.keras.callbacks.TensorBoard(log_dir = logs,\n",
@@ -266,18 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_model(hp):\n",
     "    model=tf.keras.Sequential()\n",
     "    hp_units= hp.Int('units', min_value=32, max_value=512, step=8)\n",
-    "    hp_units2= hp.Int('units', min_value=32, max_value=512, step=8)\n",
-    "    model.add(tf.keras.layers.Dense(units=hp_units, activation= 'relu',kernel_regularizer='l1_l2'))\n",
-    "    model.add(tf.keras.layers.Dense(units=hp_units2, activation= 'relu',kernel_regularizer='l1_l2'))\n",
+    "    model.add(tf.keras.layers.Dense(units=hp_units, activation= 'relu'))\n",
     "    model.add(tf.keras.layers.Dense(1, activation = 'sigmoid'))\n",
-    "\n",
+    "    if hp.Boolean(\"dropout\"):\n",
+    "        model.add(tf.keras.layers.Dropout(rate=0.25))\n",
     "    hp_learning_rate = hp.Choice('learning_rate', values=[1e-2, 1e-3, 1e-4])\n",
     "\n",
     "    model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=hp_learning_rate),\n",
@@ -289,12 +311,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Reloading Oracle from existing project /home/jordan/Documents/DataSets/DimensionData/Tuning_test/oracle.json\n"
+     ]
+    }
+   ],
    "source": [
     "tuner = kt.Hyperband(get_model,\n",
-    "                     objective=tfa.metrics.F1Score(num_classes=1, average='micro'),\n",
+    "                     objective=kt.Objective(\"val_f1_score\", direction=\"max\"),\n",
     "                     max_epochs=5,\n",
     "                     factor=3,\n",
     "                     directory='/home/jordan/Documents/DataSets/DimensionData/',\n",
@@ -303,9 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial 11 Complete [00h 02m 49s]\n",
+      "val_f1_score: 0.7824730277061462\n",
+      "\n",
+      "Best val_f1_score So Far: 0.7824730277061462\n",
+      "Total elapsed time: 00h 18m 31s\n",
+      "INFO:tensorflow:Oracle triggered exit\n"
+     ]
+    }
+   ],
    "source": [
     "tuner.search(train, train_label, epochs=50, validation_split=0.2)\n",
     "best_hps=tuner.get_best_hyperparameters(num_trials=1)[0]"
@@ -313,9 +356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The hyperparameter search is complete. The optimal number of units in the first densely-connected\n",
+      "layer is 176 and the optimal learning rate for the optimizer\n",
+      "is 0.001.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"\"\"\n",
     "The hyperparameter search is complete. The optimal number of units in the first densely-connected\n",
