Better search space for hyperparameters

--- a/Periodic time test.ipynb
+++ b/Periodic time test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,18 @@
     "import time\n",
     "from datetime import datetime\n",
     "import tensorflow_addons as tfa\n",
-    "import keras_tuner as kt"
+    "import keras_tuner as kt\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "mpl.rcParams['figure.figsize'] = (8, 6)\n",
+    "mpl.rcParams['axes.grid'] = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +50,7 @@
        "<function __main__.exports()>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +187,7 @@
     "    status=status.map(lambda x: str(x[:-1]))\n",
     "\n",
     "    status[:] = np.where(status==\"up\", 1,0)\n",
-    "    status=status.map(lambda x: float(x))\n",
+    "    status=status.map(lambda x: int(x))\n",
     "    status=status.rolling(20).mean()\n",
     "    status=status.map(np.floor)\n",
     "\n",
@@ -201,9 +207,10 @@
     "\n",
     "    #Remove unwanted columns\n",
     "    train_label=train.filter(['Status'])\n",
-    "    train=train.drop(['Status','Inband', 'Outband'], axis=1)\n",
+    "    #train=train.drop(['Status','Inband', 'Outband'], axis=1)\n",
     "    train= train.sort_values(by=['Dev_id', 'Time'])\n",
     "    train=train.reset_index(drop=True)\n",
+    "    train_label=train_label.reset_index(drop=True)\n",
     "    train=train.drop(['Dev_id'], axis=1)\n",
     "\n",
     "    return train, train_label"
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +239,13 @@
     "test=test.to_numpy()\n",
     "test_label=test_label.iloc[700:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
