--- a/Medium/97% model.ipynb
+++ b/Medium/97% model.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-15 14:32:03.761015: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-03-15 14:32:03.761039: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.exports()>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "exports"
    ]
@@ -51,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,9 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-15 14:32:51.538398: I tensorflow/core/profiler/lib/profiler_session.cc:110] Profiler session initializing.\n",
+      "2022-03-15 14:32:51.538492: I tensorflow/core/profiler/lib/profiler_session.cc:125] Profiler session started.\n",
+      "2022-03-15 14:32:51.550317: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-03-15 14:32:51.550676: I tensorflow/core/profiler/lib/profiler_session.cc:143] Profiler session tear down.\n"
+     ]
+    }
+   ],
    "source": [
     "logs = \"logs/\" + datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "tboard_callback = tf.keras.callbacks.TensorBoard(log_dir = logs,\n",
@@ -266,17 +297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_model():\n",
     "    model = tf.keras.Sequential([\n",
-    "            tf.keras.layers.Dense(128, activation='relu',kernel_regularizer='l1_l2'),\n",
-    "            tf.keras.layers.BatchNormalization(),\n",
-    "            tf.keras.layers.Dropout(0.2),\n",
-    "            tf.keras.layers.Dense(128, activation='relu',kernel_regularizer='l1_l2'),\n",
-    "            tf.keras.layers.BatchNormalization(),\n",
+    "            tf.keras.layers.Dense(80, activation='tanh'),\n",
+    "            tf.keras.layers.Dropout(0.4),\n",
+    "            tf.keras.layers.Dense(224, activation='tanh'),\n",
+    "            tf.keras.layers.Dropout(0.4),\n",
+    "            tf.keras.layers.Dense(16, activation='tanh'),\n",
+    "            tf.keras.layers.Dropout(0.4),\n",
     "            tf.keras.layers.Dense(1, activation='sigmoid')])\n",
     "    model.compile(optimizer='adam',\n",
     "            loss='BinaryCrossentropy',\n",
@@ -286,9 +318,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5394/5394 [==============================] - 18s 3ms/step - loss: 0.2684 - f1_score: 0.7753\n",
+      "Epoch 5/5\n",
+      "5394/5394 [==============================] - 18s 3ms/step - loss: 0.2517 - f1_score: 0.7753\n"
+     ]
+    }
+   ],
    "source": [
     "model = get_model()       \n",
     "history = model.fit(train, train_label, epochs=5, batch_size=128,  callbacks = [tboard_callback])"
@@ -296,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,18 +347,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-8f4b84c3f234d3d9\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-8f4b84c3f234d3d9\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%tensorboard --logdir logs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2910/2910 - 3s - loss: 0.1950 - f1_score: 0.9714 - 3s/epoch - 913us/step\n",
+      "\n",
+      "Test Accuracy: 0.9713641405105591\n"
+     ]
+    }
+   ],
    "source": [
     "test_loss, test_acc =model.evaluate(test, test_label, verbose=2)\n",
     "print('\\nTest Accuracy:', test_acc)"
