--- a/Medium/cats_vs_dogs.ipynb
+++ b/Medium/cats_vs_dogs.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import os, shutil \n"
+    "import os, shutil \n",
+    "import tensorflow as tf\n",
+    "from keras.preprocessing.image import ImageDataGenerator"
    ]
   },
   {
@@ -90,6 +93,66 @@
     "    src = os.path.join(original_dataset_dir, fname)\n",
     "    dst = os.path.join(test_dogs_dir, fname)\n",
     "    shutil.copyfile(src, dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "        tf.keras.layers.Conv2D(32,(3,3), activation='relu', input_shape = (150,150,3)),\n",
+    "        tf.keras.layers.MaxPooling2D((2, 2)),\n",
+    "        tf.keras.layers.Conv2D(64,(3,3), activation='relu'),\n",
+    "        tf.keras.layers.MaxPooling2D((2, 2)),\n",
+    "        tf.keras.layers.Conv2D(128,(3,3), activation='relu'),\n",
+    "        tf.keras.layers.MaxPooling2D((2, 2)),\n",
+    "        tf.keras.layers.Conv2D(128,(3,3), activation='relu'),\n",
+    "        tf.keras.layers.MaxPooling2D((2, 2)),\n",
+    "        tf.keras.layers.Flatten(),\n",
+    "        tf.keras.layers.Dense(512, activation='relu'),\n",
+    "        tf.keras.layers.Dense(1, activation = 'sigmoid')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model.compile(loss='binary_crossentropy',\n",
+    "              optimizer='rmsprop',\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ImageDataGenerator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/jordan/Documents/Data-Science/Medium/cats_vs_dogs.ipynb Cell 6'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/jordan/Documents/Data-Science/Medium/cats_vs_dogs.ipynb#ch0000005?line=0'>1</a>\u001b[0m train_datagen \u001b[39m=\u001b[39m ImageDataGenerator(rescale\u001b[39m=\u001b[39m\u001b[39m1.\u001b[39m\u001b[39m/\u001b[39m\u001b[39m255\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jordan/Documents/Data-Science/Medium/cats_vs_dogs.ipynb#ch0000005?line=1'>2</a>\u001b[0m test_datagen \u001b[39m=\u001b[39m ImageDataGenerator(rescale\u001b[39m=\u001b[39m\u001b[39m1.\u001b[39m\u001b[39m/\u001b[39m\u001b[39m255\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jordan/Documents/Data-Science/Medium/cats_vs_dogs.ipynb#ch0000005?line=3'>4</a>\u001b[0m train_generator \u001b[39m=\u001b[39m train_datagen\u001b[39m.\u001b[39mflow_from_directory(validation_dir,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jordan/Documents/Data-Science/Medium/cats_vs_dogs.ipynb#ch0000005?line=4'>5</a>\u001b[0m                                                     target_size\u001b[39m=\u001b[39m(\u001b[39m150\u001b[39m, \u001b[39m150\u001b[39m),\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jordan/Documents/Data-Science/Medium/cats_vs_dogs.ipynb#ch0000005?line=5'>6</a>\u001b[0m                                                     bath_size\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/jordan/Documents/Data-Science/Medium/cats_vs_dogs.ipynb#ch0000005?line=6'>7</a>\u001b[0m                                                     class_mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbinary\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ImageDataGenerator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "train_generator = train_datagen.flow_from_directory(validation_dir,\n",
+    "                                                    target_size=(150, 150),\n",
+    "                                                    bath_size=20,\n",
+    "                                                    class_mode='binary')"
    ]
   }
  ],
