--- a/Medium/Titanic_NN.ipynb
+++ b/Medium/Titanic_NN.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "from sklearn import preprocessing \n",
-    "from sklearn import compose"
+    "import sklearn\n",
+    "import sklearn.model_selection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,47 +24,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.copy()\n",
-    "X = X.dropna()\n",
-    "Y = X[['Survived', 'PassengerId']].copy()\n"
+    "df2 = df.copy()\n",
+    "#X = df2.dropna()\n",
+    "y = df2['Survived']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y = Y.merge(X, 'inner', on = 'PassengerId')\n",
-    "Y = Y.pop('Survived_y')\n",
-    "X = X.drop('Survived', axis=1)\n",
-    "X"
+    "features = ['Pclass', 'Sex', 'SibSp', 'Parch', 'Embarked']\n",
+    "train_data = pd.get_dummies(df2[features], dummy_na=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = X.iloc[:163]\n",
-    "test = X.iloc[163:]\n",
-    "\n",
-    "train_label = Y.iloc[:163]\n",
-    "test_label = Y.iloc[163:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train.drop('Name', inplace=True, axis=1)"
+    "X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(train_data, y, test_size = 0.2)"
    ]
   },
   {
@@ -115,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,18 +117,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-07 18:58:31.623758: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-12-07 18:58:31.627504: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6/6 [==============================] - 1s 10ms/step - loss: 0.8526 - binary_accuracy: 0.5140\n",
+      "Epoch 2/5\n",
+      "6/6 [==============================] - 0s 3ms/step - loss: 0.8106 - binary_accuracy: 0.5295\n",
+      "Epoch 3/5\n",
+      "6/6 [==============================] - 0s 2ms/step - loss: 0.8065 - binary_accuracy: 0.5463\n",
+      "Epoch 4/5\n",
+      "6/6 [==============================] - 0s 8ms/step - loss: 0.7664 - binary_accuracy: 0.5815\n",
+      "Epoch 5/5\n",
+      "6/6 [==============================] - 0s 8ms/step - loss: 0.7712 - binary_accuracy: 0.5660\n"
+     ]
+    }
+   ],
    "source": [
     "model = get_model()       \n",
-    "history = model.fit(transformed_df, train_label, epochs=5, batch_size=128)"
+    "history = model.fit(X_train, y_train, epochs=5, batch_size=128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6/6 [==============================] - 0s 13ms/step - loss: 0.7165 - binary_accuracy: 0.5978\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5977653861045837"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_loss, test_acc = model.evaluate(X_test, y_test)\n",
+    "test_acc"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.10.8 ('Science')",
    "language": "python",
    "name": "python3"
   },
@@ -157,12 +202,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "8531fd8276667611a043c2908b65edc9af71e1f7d141a4558b3db2696b88e08b"
    }
   }
  },
